--- a/app/views/posts.html
+++ b/app/views/posts.html
@@ -1,1 +1,13 @@
-<p> {{ "hello" + "world" }} </p>
+<div ng-repeat="post in posts">
+  <a href="{{post.url}}">{{ post.title }} </a>
+  <a ng-click="deletePost($index)">delete</a>
+</div>
+
+<form ng-submit="submitPost()">
+  <input type="text" ng-model="post.title" />
+  <input type="text" ng-model="post.url" />
+  <input type="submit" value="Add Post" />
+</form>
+
+Post: {{ post }} <br/>
+Posts: {{ posts }}
