--- a/app/views/posts.html
+++ b/app/views/posts.html
@@ -1,13 +1,29 @@
-<div ng-repeat="(postId, post) in posts">
-  <a href="{{post.url}}">{{ post.title }} </a>
-  <a ng-click="deletePost(postId)">delete</a>
+<div class="container posts-page">
+
+  <div class="post row" ng-repeat="(postId, post) in posts">
+    <div class="col-xs-1">
+
+    </div>
+    <div class="col-md-9">
+
+      <div class="info">
+        <a href="{{ post.url }}">
+          {{ post.title }}
+          <span class="url">({{ post.url | hostnameFromUrl }})</span>
+        </a>
+      </div>
+
+      <div>
+        <a href="#/posts/{{ postId }}">comments</a>
+        <a ng-click="deletePost(postId)">delete</a>
+      </div>
+
+    </div>
+
+    <div class="col-md-2">
+
+    </div>
+
+  </div>
+
 </div>
-
-<form ng-submit="submitPost()">
-  <input type="text" ng-model="post.title" />
-  <input type="text" ng-model="post.url" />
-  <input type="submit" value="Add Post" />
-</form>
-
-Post: {{ post }} <br/>
-Posts: {{ posts }}
