--- a/app/views/posts.html
+++ b/app/views/posts.html
@@ -14,8 +14,12 @@
       </div>
 
       <div>
+        <span>submitted by <a href="#/users/{{ post.owner }}">{{ post.owner }}</a></span>
+
+        &mdash;
+
         <a href="#/posts/{{ postId }}">comments</a>
-        <a ng-click="deletePost(postId)">delete</a>
+        <a ng-click="deletePost(postId)" ng-show="signedIn() && post.owner=== currentUser.username">delete</a>
       </div>
 
     </div>
