--- a/app/views/posts.html
+++ b/app/views/posts.html
@@ -2,9 +2,11 @@
 
   <div class="post row" ng-repeat="(postId, post) in posts">
     <div class="col-xs-1">
+      <div class="vote up"><span ng-hide="downVoted(post)" ng-click="upVotePost(postId, upVoted(post))">&#x25B2;</span></div>
 
+      <div class="vote down"><span ng-hide="upVoted(post)" ng-click="downVotePost(postId, downVoted(post))">&#x25BC;</span></div>
     </div>
-    <div class="col-md-9">
+    <div class="col-md-9 col-xs-11">
 
       <div class="info">
         <a href="{{ post.url }}">
@@ -12,18 +14,15 @@
           <span class="url">({{ post.url | hostnameFromUrl }})</span>
         </a>
       </div>
-
       <div>
-        <span>submitted by <a href="#/users/{{ post.owner }}">{{ post.owner }}</a></span>
-
+        <span>{{ post.score || 0 }} votes</span>
         &mdash;
-
+        <span>submitted by <a href="#/users/{{ post.owner }}">{{ post.owner }}</a></span>
+        &mdash;
         <a href="#/posts/{{ postId }}">comments</a>
-        <a ng-click="deletePost(postId)" ng-show="signedIn() && post.owner=== currentUser.username">delete</a>
+        <a ng-click="deletePost(postId)">delete</a>
       </div>
-
     </div>
-
     <div class="col-md-2">
 
     </div>
